.infrastructure/platform/base/storage/janusgraph/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: janusgraph
spec:
  selector:
    app: janusgraph
  ports:
    - port: 8182
      name: gremlin
  type: ClusterIP
